--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -247,3 +247,15 @@ doi = {10.48550/arXiv.1712.00303}
    author={Vlasblom, Marissa and Temmink, Milou and Grant, Sierra L. and Kurtovic, Nicolas and Sellek, Andrew D. and van Dishoeck, Ewine F. and Güdel, Manuel and Henning, Thomas and Lagage, Pierre-Olivier and Barrado, David and Caratti o Garatti, Alessio and Glauser, Adrian M. and Kamp, Inga and Lahuis, Fred and Olofsson, Göran and Arabhavi, Aditya M. and Christiaens, Valentin and Gasman, Danny and Jang, Hyerin and Morales-Calderón, Maria and Perotti, Giulia and Schwarz, Kamber and Tabone, Benoît},
    year={2025},
    month=jan, pages={A278} }
+
+@article{Frasca_2017,
+   title={X-shooter spectroscopy of young stellar objects in Lupus: Atmospheric parameters, membership, and activity diagnostics ⋆⋆⋆},
+   volume={602},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/201630108},
+   DOI={10.1051/0004-6361/201630108},
+   journal={Astronomy &amp; Astrophysics},
+   publisher={EDP Sciences},
+   author={Frasca, A. and Biazzo, K. and Alcalá, J. M. and Manara, C. F. and Stelzer, B. and Covino, E. and Antoniucci, S.},
+   year={2017},
+   month=may, pages={A33} }
