--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -727,5 +727,51 @@ In this thesis, we have looked at the influence of the carbon and oxygen abundan
 \appendix
 \chapter{More ProDiMo Results}
 \chapter{Chi square fits}
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[b]{0.8\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{radexpy_niels/Radexpy_for_Niels/chi2_map_H2O_GWLup.pdf}
+        \caption{caption}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.8\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{radexpy_niels/Radexpy_for_Niels/chi2_map_CO_GWLup.pdf}
+        \caption{caption}
+    \end{subfigure}
+    \caption{caption}
+\end{figure}
 
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[b]{0.8\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{radexpy_niels/Radexpy_for_Niels/chi2_map_H2O_Sz98.pdf}
+        \caption{caption}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.8\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{radexpy_niels/Radexpy_for_Niels/chi2_map_CO_Sz98.pdf}
+        \caption{caption}
+    \end{subfigure}
+    \caption{caption}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}[b]{0.8\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{radexpy_niels/Radexpy_for_Niels/chi2_map_H2O_V1094Sco.pdf}
+        \caption{caption}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[b]{0.8\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{radexpy_niels/Radexpy_for_Niels/chi2_map_CO_V1094Sco.pdf}
+        \caption{caption}
+    \end{subfigure}
+    \caption{caption}
+\end{figure}
 \end{document}
