--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -256,6 +256,6 @@ doi = {10.48550/arXiv.1712.00303}
    DOI={10.1051/0004-6361/201630108},
    journal={Astronomy &amp; Astrophysics},
    publisher={EDP Sciences},
-   author={Frasca, A. and Biazzo, K. and Alcalá, J. M. and Manara, C. F. and Stelzer, B. and Covino, E. and Antoniucci, S.},
+   author={Frasca, A. and Biazzo, K. and Alcala, J. M. and Manara, C. F. and Stelzer, B. and Covino, E. and Antoniucci, S.},
    year={2017},
    month=may, pages={A33} }
