New spectral regions

--- a/SimulatedData.ipynb
+++ b/SimulatedData.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T19:01:03.644596Z",
-     "start_time": "2025-06-02T19:01:01.947389Z"
+     "end_time": "2025-06-03T16:50:28.477682Z",
+     "start_time": "2025-06-03T16:50:26.765506Z"
     }
    },
    "cell_type": "code",
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T19:01:03.962499Z",
-     "start_time": "2025-06-02T19:01:03.955320Z"
+     "end_time": "2025-06-03T16:50:28.497416Z",
+     "start_time": "2025-06-03T16:50:28.489806Z"
     }
    },
    "cell_type": "code",
@@ -113,8 +113,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T19:01:04.660653Z",
-     "start_time": "2025-06-02T19:01:04.021929Z"
+     "end_time": "2025-06-03T16:50:29.195235Z",
+     "start_time": "2025-06-03T16:50:28.506772Z"
     }
    },
    "cell_type": "code",
@@ -251,8 +251,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T19:01:05.171444Z",
-     "start_time": "2025-06-02T19:01:05.165058Z"
+     "end_time": "2025-06-03T16:50:55.424551Z",
+     "start_time": "2025-06-03T16:50:55.418206Z"
     }
    },
    "cell_type": "code",
@@ -329,13 +329,13 @@
    ],
    "id": "49eceb9341af76d1",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T19:01:05.405997Z",
-     "start_time": "2025-06-02T19:01:05.219914Z"
+     "end_time": "2025-06-03T16:50:33.313088Z",
+     "start_time": "2025-06-03T16:50:33.130677Z"
     }
    },
    "cell_type": "code",
@@ -357,7 +357,7 @@
    ],
    "id": "3f5df338995c0006",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -958,8 +958,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T19:01:50.992410Z",
-     "start_time": "2025-06-02T19:01:45.692295Z"
+     "end_time": "2025-06-03T18:27:40.211682Z",
+     "start_time": "2025-06-03T18:00:50.913747Z"
     }
    },
    "cell_type": "code",
@@ -971,11 +971,12 @@
     "# plt.figure(figsize=(16, 5))\n",
     "clip_min, clip_max = 4.9, 27.5\n",
     "n_runs = 100\n",
+    "positives = 0\n",
+    "negatives = 0\n",
     "for target in species:\n",
     "    for i, row in df.iterrows():\n",
-    "        print(row['CO Value'], '------------')\n",
-    "        positives = 0\n",
-    "        for _ in range(n_runs):\n",
+    "        print(f'{i}/25')\n",
+    "        for j in range(n_runs):\n",
     "            # plt.figure(figsize=(16, 5))\n",
     "            wavelength = row['FLiTs Wavelength']\n",
     "            flux_cont_sub = row['FLiTs Flux']\n",
@@ -1010,9 +1011,9 @@
     "                            exclude=99, title=f'{target}Not Present', plot=False)<0.05:\n",
     "                # print(target + ' noise: ', True )\n",
     "                positives += 1\n",
-    "            # else:\n",
-    "                # print(target + ' noise: ', False )\n",
-    "        print(positives/n_runs*100, '% positive')    # plt.show()"
+    "            else:\n",
+    "                negatives += 1\n",
+    "    print(target, positives/(positives+negatives)*100, '% positive')    # plt.show()"
    ],
    "id": "6664cbfabb7bfdc7",
    "outputs": [
@@ -1020,27 +1021,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.45 ------------\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[15]\u001B[39m\u001B[32m, line 42\u001B[39m\n\u001B[32m     26\u001B[39m target_flux = avg_flux[target]\n\u001B[32m     27\u001B[39m \u001B[38;5;66;03m# plt.plot(total_wl, flux_cont_sub*1000, c='black', label='Total Spectrum')\u001B[39;00m\n\u001B[32m     28\u001B[39m \u001B[38;5;66;03m# plt.plot(total_wl, (noise_flux)*1000, c=colors[target], label=f'{target} Emission')\u001B[39;00m\n\u001B[32m     29\u001B[39m \u001B[38;5;66;03m# plt.title(f'C/O>1')\u001B[39;00m\n\u001B[32m   (...)\u001B[39m\u001B[32m     40\u001B[39m \u001B[38;5;66;03m# plt.savefig('Figures/Cross-Correlation.pdf', bbox_inches='tight')\u001B[39;00m\n\u001B[32m     41\u001B[39m \u001B[38;5;66;03m# plt.show()\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m42\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mnew_detect_molecule\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtotal_wl\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnoise_flux\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtarget_flux\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mclip_min\u001B[49m\u001B[43m=\u001B[49m\u001B[43mclip_min\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mclip_max\u001B[49m\u001B[43m=\u001B[49m\u001B[43mclip_max\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     43\u001B[39m \u001B[43m                \u001B[49m\u001B[43mpeak_shift\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m0\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mwindow\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m100\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[32m     44\u001B[39m \u001B[43m                \u001B[49m\u001B[43mexclude\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m99\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtitle\u001B[49m\u001B[43m=\u001B[49m\u001B[33;43mf\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mtarget\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[33;43mNot Present\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mplot\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m)\u001B[49m<\u001B[32m0.05\u001B[39m:\n\u001B[32m     45\u001B[39m     \u001B[38;5;66;03m# print(target + ' noise: ', True )\u001B[39;00m\n\u001B[32m     46\u001B[39m     positives += \u001B[32m1\u001B[39m\n\u001B[32m     47\u001B[39m \u001B[38;5;66;03m# else:\u001B[39;00m\n\u001B[32m     48\u001B[39m     \u001B[38;5;66;03m# print(target + ' noise: ', False )\u001B[39;00m\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[5]\u001B[39m\u001B[32m, line 45\u001B[39m, in \u001B[36mnew_detect_molecule\u001B[39m\u001B[34m(wavelength, spectrum, specie_spectrum, clip_min, clip_max, peak_shift, window, exclude, title, plot, n_trials)\u001B[39m\n\u001B[32m     39\u001B[39m     cc_new = correlate(np.random.choice(spectrum[feature_mask], size=\u001B[38;5;28mlen\u001B[39m(spectrum[feature_mask]), replace=\u001B[38;5;28;01mTrue\u001B[39;00m), specie_spectrum[feature_mask], mode=\u001B[33m'\u001B[39m\u001B[33mfull\u001B[39m\u001B[33m'\u001B[39m)\n\u001B[32m     40\u001B[39m     \u001B[38;5;66;03m# factor = np.sum(X[~noise_mask]*cc_new[lag_indices][~noise_mask])/np.sum(X[~noise_mask]**2)\u001B[39;00m\n\u001B[32m     41\u001B[39m     \u001B[38;5;66;03m# model = factor * X\u001B[39;00m\n\u001B[32m     42\u001B[39m     \u001B[38;5;66;03m# plt.plot(lags[lag_indices], cc_new[lag_indices])\u001B[39;00m\n\u001B[32m     43\u001B[39m     \u001B[38;5;66;03m# plt.plot(lags[lag_indices], cc[lag_indices])\u001B[39;00m\n\u001B[32m     44\u001B[39m     \u001B[38;5;66;03m# plt.show()\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m45\u001B[39m     test_s_list.append(cc_new[lag_indices][mid]-\u001B[43mnp\u001B[49m\u001B[43m.\u001B[49m\u001B[43mmedian\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcc_new\u001B[49m\u001B[43m[\u001B[49m\u001B[43mlag_indices\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43m~\u001B[49m\u001B[43mnoise_mask\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m)\n\u001B[32m     46\u001B[39m test_s_list = np.array(test_s_list)\n\u001B[32m     47\u001B[39m p = \u001B[38;5;28mround\u001B[39m(\u001B[32m1\u001B[39m - \u001B[38;5;28mlen\u001B[39m(test_s_list[test_s_list<test_s])/n_trials, \u001B[38;5;28mint\u001B[39m(np.log10(n_trials)))\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\PycharmProjects\\BRP\\.venv\\Lib\\site-packages\\numpy\\lib\\_function_base_impl.py:3961\u001B[39m, in \u001B[36mmedian\u001B[39m\u001B[34m(a, axis, out, overwrite_input, keepdims)\u001B[39m\n\u001B[32m   3870\u001B[39m \u001B[38;5;129m@array_function_dispatch\u001B[39m(_median_dispatcher)\n\u001B[32m   3871\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mmedian\u001B[39m(a, axis=\u001B[38;5;28;01mNone\u001B[39;00m, out=\u001B[38;5;28;01mNone\u001B[39;00m, overwrite_input=\u001B[38;5;28;01mFalse\u001B[39;00m, keepdims=\u001B[38;5;28;01mFalse\u001B[39;00m):\n\u001B[32m   3872\u001B[39m \u001B[38;5;250m    \u001B[39m\u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m   3873\u001B[39m \u001B[33;03m    Compute the median along the specified axis.\u001B[39;00m\n\u001B[32m   3874\u001B[39m \n\u001B[32m   (...)\u001B[39m\u001B[32m   3959\u001B[39m \n\u001B[32m   3960\u001B[39m \u001B[33;03m    \"\"\"\u001B[39;00m\n\u001B[32m-> \u001B[39m\u001B[32m3961\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_ureduce\u001B[49m\u001B[43m(\u001B[49m\u001B[43ma\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfunc\u001B[49m\u001B[43m=\u001B[49m\u001B[43m_median\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkeepdims\u001B[49m\u001B[43m=\u001B[49m\u001B[43mkeepdims\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maxis\u001B[49m\u001B[43m=\u001B[49m\u001B[43maxis\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mout\u001B[49m\u001B[43m=\u001B[49m\u001B[43mout\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m   3962\u001B[39m \u001B[43m                    \u001B[49m\u001B[43moverwrite_input\u001B[49m\u001B[43m=\u001B[49m\u001B[43moverwrite_input\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\PycharmProjects\\BRP\\.venv\\Lib\\site-packages\\numpy\\lib\\_function_base_impl.py:3848\u001B[39m, in \u001B[36m_ureduce\u001B[39m\u001B[34m(a, func, keepdims, **kwargs)\u001B[39m\n\u001B[32m   3845\u001B[39m             index_out = (\u001B[32m0\u001B[39m, ) * nd\n\u001B[32m   3846\u001B[39m             kwargs[\u001B[33m'\u001B[39m\u001B[33mout\u001B[39m\u001B[33m'\u001B[39m] = out[(\u001B[38;5;28mEllipsis\u001B[39m, ) + index_out]\n\u001B[32m-> \u001B[39m\u001B[32m3848\u001B[39m r = \u001B[43mfunc\u001B[49m\u001B[43m(\u001B[49m\u001B[43ma\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m*\u001B[49m\u001B[43m*\u001B[49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   3850\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m out \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[32m   3851\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m out\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\PycharmProjects\\BRP\\.venv\\Lib\\site-packages\\numpy\\lib\\_function_base_impl.py:3994\u001B[39m, in \u001B[36m_median\u001B[39m\u001B[34m(a, axis, out, overwrite_input)\u001B[39m\n\u001B[32m   3992\u001B[39m         part = a\n\u001B[32m   3993\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m-> \u001B[39m\u001B[32m3994\u001B[39m     part = \u001B[43mpartition\u001B[49m\u001B[43m(\u001B[49m\u001B[43ma\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkth\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maxis\u001B[49m\u001B[43m=\u001B[49m\u001B[43maxis\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   3996\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m part.shape == ():\n\u001B[32m   3997\u001B[39m     \u001B[38;5;66;03m# make 0-D arrays work\u001B[39;00m\n\u001B[32m   3998\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m part.item()\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\PycharmProjects\\BRP\\.venv\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:870\u001B[39m, in \u001B[36mpartition\u001B[39m\u001B[34m(a, kth, axis, kind, order)\u001B[39m\n\u001B[32m    868\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m    869\u001B[39m     a = asanyarray(a).copy(order=\u001B[33m\"\u001B[39m\u001B[33mK\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m--> \u001B[39m\u001B[32m870\u001B[39m \u001B[43ma\u001B[49m\u001B[43m.\u001B[49m\u001B[43mpartition\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkth\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maxis\u001B[49m\u001B[43m=\u001B[49m\u001B[43maxis\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkind\u001B[49m\u001B[43m=\u001B[49m\u001B[43mkind\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43morder\u001B[49m\u001B[43m=\u001B[49m\u001B[43morder\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    871\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m a\n",
-      "\u001B[31mKeyboardInterrupt\u001B[39m: "
+      "0/25\n",
+      "1/25\n",
+      "2/25\n",
+      "3/25\n",
+      "4/25\n",
+      "5/25\n",
+      "6/25\n",
+      "7/25\n",
+      "8/25\n",
+      "9/25\n",
+      "10/25\n",
+      "11/25\n",
+      "12/25\n",
+      "13/25\n",
+      "14/25\n",
+      "15/25\n",
+      "16/25\n",
+      "17/25\n",
+      "18/25\n",
+      "19/25\n",
+      "20/25\n",
+      "21/25\n",
+      "22/25\n",
+      "23/25\n",
+      "24/25\n",
+      "NH3 23.84 % positive\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 12
   },
   {
    "metadata": {
